# 2024__EspressoPro

./: .gitignore  AUTOMATIC_PATHS.md  LICENSE  README.md  TESTS_COMPLETE.md  pyproject.toml  pytest.ini  run_tests.sh  test_download.py  test_model_checks.py
espressopro/: __init__.py  annotation.py  core.py  prediction.py
espressopro.egg-info/: PKG-INFO  SOURCES.txt
src/: __init__.py  annotation.py  cli.py  constants.py  core.py  markers.py  missionbio.py  prediction.py
src/espressopro/: __init__.py  annotation.py  missionbio.py
src/espressopro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: README.md  __init__.py  conftest.py  example_automatic_paths.py  run_tests.py  run_tests.sh  test_annotation_auto_paths.py  test_automatic_paths.py  test_automatic_paths_simple.py  test_espressopro.py  test_paths.py  test_simple.py
