[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "espressopro"
version = "1.0.1"
authors = [
    {name = "Kristian Gurashi", email = "kristian.gurashi@gmail.com"},
]
description = "Modular cell type annotation pipeline for single-cell protein data"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["single-cell", "cell-type-annotation", "protein", "cytometry", "bioinformatics"]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "scanpy>=1.8.0",
    "anndata>=0.8.0",
    "joblib>=1.0.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "umap-learn>=0.5.0",
    "leidenalg>=0.8.0",
    "xgboost>=1.5.0",
    "missionbio.mosaic-base>=3.0.0",
    "python-kaleido",
    "itables",
    "chrov>=0.0.3",
    "venny4py",
    "gdown",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "notebook>=6.5.0",
    "ipykernel",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
    "nbsphinx",
]
all = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "notebook>=6.5.0",
    "ipykernel",
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
    "nbsphinx",
]

[project.urls]
Homepage = "https://github.com/EspressoKris/EspressoPro"
Documentation = "https://espressopro.readthedocs.io"
Repository = "https://github.com/EspressoKris/EspressoPro"
"Bug Tracker" = "https://github.com/EspressoKris/EspressoPro/issues"

[project.scripts]
espressopro = "espressopro.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["espressopro*"]

[tool.setuptools.package-data]
espressopro = ["data/*", "models/*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
